# GeoPalette

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  environment.yaml  pyproject.toml  requirements.txt  test_conversions.py
.github/workflows/: tests.yml
examples/: convert_geotiff.py
geopalette/: __init__.py  __main__.py  conversions.py  io_utils.py
tests/: test_console_ascii.py  test_conversions.py  test_geopalette.py  test_python39_compat.py  test_reference.py  test_version_consistency.py
