[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geopalette"
version = "0.1.0"
description = "Color space conversions for geospatial raster data."
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.9"
authors = [
    {name = "Igor Pawelec"}
]
keywords = [
    "remote-sensing", "color-space", "raster", "geospatial",
    "CIELAB", "HSV", "HSL", "Oklab", "superpixels", "GIS",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
io = ["rasterio>=1.3"]
all = ["rasterio>=1.3", "matplotlib"]
dev = ["pytest", "rasterio>=1.3", "matplotlib"]

[project.scripts]
geopalette = "geopalette.__main__:main"

[project.urls]
Homepage = "https://github.com/igorpawelec/geopalette"
Repository = "https://github.com/igorpawelec/geopalette"
Issues = "https://github.com/igorpawelec/geopalette/issues"

[tool.setuptools.packages.find]
include = ["geopalette*"]
